Array builder refactor (#1332)
* Add ability to constraint InlineFlops to a specific side of the PBlock to improve routability. Also unroute top-level I/O nets that exit the pblock.

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Automate placement in ArrayBuilder

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Use regex for port side map

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Address comments

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Update to new getBitBlastedIndices

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Remove unnecessary function calls

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Add test case of unrouteTopLevelNetsThatLeavePBlock

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Remove extra imports

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Add initial removeInlineFlops test

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Test remove inline flops and remove unnecessary code

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Add back pin removal because of the specific case where a flop is in the same slice as a ground source

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Add ability to route array builder design

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Remove hardcoded placement constraints

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Handle null case

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Address comments and add new test cases

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Cleanup

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Start refactoring array builder

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Refactor mostly complete

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Time flop harness creation

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* More ArrayBuilder refactoring

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Move main

Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>

* Fix array builder fail