@@ -28,7 +28,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -63,8 +62,6 @@ import com.xilinx.rapidwright.design.blocks.PBlockSide;
 import com.xilinx.rapidwright.device.BEL;
 import com.xilinx.rapidwright.device.ClockRegion;
 import com.xilinx.rapidwright.device.Device;
-import com.xilinx.rapidwright.device.Part;
-import com.xilinx.rapidwright.device.PartNameTools;
 import com.xilinx.rapidwright.device.Series;
 import com.xilinx.rapidwright.device.Site;
 import com.xilinx.rapidwright.device.Tile;
@@ -74,7 +71,6 @@ import com.xilinx.rapidwright.edif.EDIFDirection;
 import com.xilinx.rapidwright.edif.EDIFHierCellInst;
 import com.xilinx.rapidwright.edif.EDIFHierNet;
 import com.xilinx.rapidwright.edif.EDIFNet;
-import com.xilinx.rapidwright.edif.EDIFNetlist;
 import com.xilinx.rapidwright.edif.EDIFPort;
 import com.xilinx.rapidwright.edif.EDIFPortInst;
 import com.xilinx.rapidwright.edif.EDIFTools;
@@ -89,7 +85,6 @@ import com.xilinx.rapidwright.util.PerformanceExplorer;
 import com.xilinx.rapidwright.util.VivadoTools;
 
 import joptsimple.OptionParser;
-import joptsimple.OptionSet;
 
 import static com.xilinx.rapidwright.util.Utils.isBRAM;
 import static com.xilinx.rapidwright.util.Utils.isDSP;
@@ -101,113 +96,39 @@ import static com.xilinx.rapidwright.util.Utils.isSLICE;
  */
 public class ArrayBuilder {
 
-    private static final List<String> KERNEL_DESIGN_OPTS = Arrays.asList("i", "input");
-    private static final List<String> OUTPUT_DESIGN_OPTS = Arrays.asList("o", "output");
-    private static final List<String> INPUT_EDIF_OPTS = Arrays.asList("e", "edif");
-    private static final List<String> UTILIZATION_OPTS = Arrays.asList("u", "utilization");
-    private static final List<String> SHAPES_OPTS = Arrays.asList("s", "shapes");
-    private static final List<String> PART_OPTS = Arrays.asList("p", "part");
-    private static final List<String> PBLOCK_OPTS = Arrays.asList("b", "pblock");
-    private static final List<String> HELP_OPTS = Arrays.asList("?", "h", "help");
-    private static final List<String> TARGET_CLK_PERIOD_OPTS = Arrays.asList("c", "clk-period");
-    private static final List<String> KERNEL_CLK_NAME_OPTS = Arrays.asList("n", "kernel-clk-name");
-    private static final List<String> TOP_CLK_NAME_OPTS = Arrays.asList("m", "top-clk-name");
-    private static final List<String> REUSE_RESULTS_OPTS = Arrays.asList("r", "reuse");
-    private static final List<String> SKIP_IMPL_OPTS = Arrays.asList("k", "skip-impl");
-    private static final List<String> LIMIT_INSTS_OPTS = Arrays.asList("l", "limit-inst-count");
-    private static final List<String> TOP_LEVEL_DESIGN_OPTS = Arrays.asList("t", "top-design");
-    private static final List<String> EXACT_PLACEMENT_OPTS = Collections.singletonList("exact-placement");
-    private static final List<String> WRITE_PLACEMENT_OPTS = Collections.singletonList("write-placement");
-    private static final List<String> PLACEMENT_FILE_OPTS = Collections.singletonList("read-placement");
-    private static final List<String> PLACEMENT_GRID_OPTS = Collections.singletonList("write-placement-grid");
-    private static final List<String> OUT_OF_CONTEXT_OPTS = Collections.singletonList("out-of-context");
-    private static final List<String> UNROUTE_STATIC_NETS_OPTS = Collections.singletonList("unroute-static-nets");
-    private static final List<String> ROUTE_CLOCK_OPTS = Collections.singletonList("route-clock-only");
-    private static final List<String> ROUTE_DESIGN_OPTS = Collections.singletonList("route");
-    private static final List<String> SIDE_MAP_OPTS = Collections.singletonList("kernel-side-map");
-
-    private Design design;
+    private Design kernelDesign;
 
     private Design topDesign;
 
+    private Design array;
+
+    private String kernelClockName;
+
+    private String topClockName;
+
     private List<PBlock> pblocks;
-
-    private double clkPeriod;
-
-    private String kernelClkName;
-
-    private String topClkName;
-
-    private boolean skipImpl;
-
-    private String outputName;
 
     private CodePerfTracker t;
 
-    private int instCountLimit = Integer.MAX_VALUE;
-
-    private String outputPlacementFileName;
-
-    private String inputPlacementFileName;
-
-    private String outputPlacementLocsFileName;
-
-    private boolean outOfContext;
-
     private ArrayNetlistGraph condensedGraph;
 
-    private boolean exactPlacement;
+    private Map<ModuleInst, Site> newPlacementMap;
 
-    private boolean unrouteStaticNets;
+    private List<Module> modules;
 
-    private boolean routeClock;
+    private List<String> modInstNames;
 
-    private boolean routeDesign;
+    private final ArrayBuilderConfig config;
 
-    private String sideMapFile;
-
-    public static final double DEFAULT_CLK_PERIOD_TARGET = 2.0;
-
-    private OptionParser createOptionParser() {
-
-        OptionParser p = new OptionParser() {
-            {
-                acceptsAll(KERNEL_DESIGN_OPTS, "Input Kernel Design (*.dcp or *.edf)").withRequiredArg();
-                acceptsAll(OUTPUT_DESIGN_OPTS, "Output Array Design (default is 'array.dcp')").withRequiredArg();
-                acceptsAll(PBLOCK_OPTS, "PBlock Constraint(s), separated with ';'").withRequiredArg();
-                acceptsAll(INPUT_EDIF_OPTS, "Companion EDIF for DCP  (*.edf)").withRequiredArg();
-                acceptsAll(UTILIZATION_OPTS, "Vivado Generated Utilization Report").withRequiredArg();
-                acceptsAll(SHAPES_OPTS, "Vivado Generated Shapes").withRequiredArg();
-                acceptsAll(PART_OPTS, "Target AMD Part").withRequiredArg();
-                acceptsAll(TARGET_CLK_PERIOD_OPTS, "Target Clock Period (ns)").withRequiredArg();
-                acceptsAll(KERNEL_CLK_NAME_OPTS, "Kernel Clock Name").withRequiredArg();
-                acceptsAll(TOP_CLK_NAME_OPTS, "Top Clock Name").withRequiredArg();
-                acceptsAll(REUSE_RESULTS_OPTS, "Reuse Previous Implementation Results");
-                acceptsAll(SKIP_IMPL_OPTS, "Skip Implementation of the Kernel");
-                acceptsAll(LIMIT_INSTS_OPTS, "Limit number of instance copies").withRequiredArg();
-                acceptsAll(WRITE_PLACEMENT_OPTS, "Write the chosen placement to the specified file").withRequiredArg();
-                acceptsAll(PLACEMENT_FILE_OPTS, "Use placement specified in file").withRequiredArg();
-                acceptsAll(PLACEMENT_GRID_OPTS, "Write grid of possible placement locations to specified file").withRequiredArg();
-                acceptsAll(TOP_LEVEL_DESIGN_OPTS, "Top level design with blackboxes/kernel insts").withRequiredArg();
-                acceptsAll(EXACT_PLACEMENT_OPTS, "Use exact module overlap calculation instead of the faster bounding-box method");
-                acceptsAll(OUT_OF_CONTEXT_OPTS, "Specifies that the array will be compiled out of context");
-                acceptsAll(UNROUTE_STATIC_NETS_OPTS, "Unroute static (GND/VCC) nets to potentially help with routability");
-                acceptsAll(ROUTE_CLOCK_OPTS, "Route clock using RWRoute");
-                acceptsAll(ROUTE_DESIGN_OPTS, "Route the built array using RWRoute");
-                acceptsAll(SIDE_MAP_OPTS, "Provide a text file specifying which side of the pblock each " +
-                        "top-level port routes to. Used to place array optimally for routability.").withRequiredArg();
-                acceptsAll(HELP_OPTS, "Print this help message").forHelp();
-            }
-        };
-
-        return p;
+    public ArrayBuilder(ArrayBuilderConfig config) {
+        newPlacementMap = new HashMap<>();
+        modInstNames = new ArrayList<>();
+        modules = new ArrayList<>();
+        this.config = config;
     }
 
-    public ArrayBuilder() {
-
-    }
-
-    public ArrayBuilder(CodePerfTracker t) {
+    public ArrayBuilder(ArrayBuilderConfig config, CodePerfTracker t) {
+        this(config);
         this.t = t;
     }
 
@@ -225,20 +146,24 @@ public class ArrayBuilder {
         return getKernelDesign().getDevice();
     }
 
-    public void setKernelDesign(Design design) {
-        this.design = design;
-    }
-
     public Design getKernelDesign() {
-        return design;
+        return kernelDesign;
     }
 
     public Design getTopDesign() {
         return topDesign;
     }
 
-    public void setTopDesign(Design topDesign) {
-        this.topDesign = topDesign;
+    public Design getArray() {
+        return array;
+    }
+
+    public String getKernelClockName() {
+        return kernelClockName;
+    }
+
+    public String getTopClockName() {
+        return topClockName;
     }
 
     public void setPBlocks(List<PBlock> pblocks) {
@@ -249,86 +174,6 @@ public class ArrayBuilder {
         return pblocks == null ? Collections.emptyList() : pblocks;
     }
 
-    public void setClockPeriod(double clkPeriod) {
-        this.clkPeriod = clkPeriod;
-    }
-
-    public double getClockPeriod() {
-        return clkPeriod;
-    }
-
-    public void setKernelClockName(String clkName) {
-        this.kernelClkName = clkName;
-    }
-
-    public String getKernelClockName() {
-        return kernelClkName;
-    }
-
-    public void setTopClockName(String clkName) {
-        this.topClkName = clkName;
-    }
-
-    public String getTopClockName() {
-        return topClkName;
-    }
-
-    public boolean isSkipImpl() {
-        return skipImpl;
-    }
-
-    public void setSkipImpl(boolean skipImpl) {
-        this.skipImpl = skipImpl;
-    }
-
-    public String getOutputName() {
-        return outputName;
-    }
-
-    public void setOutputName(String outputName) {
-        this.outputName = outputName;
-    }
-
-    public int getInstCountLimit() {
-        return instCountLimit;
-    }
-
-    public void setInstCountLimit(int instCountLimit) {
-        this.instCountLimit = instCountLimit;
-    }
-
-    public String getOutputPlacementFileName() {
-        return outputPlacementFileName;
-    }
-
-    public void setOutputPlacementFileName(String outputPlacementFileName) {
-        this.outputPlacementFileName = outputPlacementFileName;
-    }
-
-    public String getInputPlacementFileName() {
-        return inputPlacementFileName;
-    }
-
-    public void setInputPlacementFileName(String inputPlacementFileName) {
-        this.inputPlacementFileName = inputPlacementFileName;
-    }
-
-    public String getOutputPlacementLocsFileName() {
-        return outputPlacementLocsFileName;
-    }
-
-    public void setOutputPlacementLocsFileName(String outputPlacementLocsFileName) {
-        this.outputPlacementLocsFileName = outputPlacementLocsFileName;
-    }
-
-    public boolean isOutOfContext() {
-        return outOfContext;
-    }
-
-    public void setOutOfContext(boolean outOfContext) {
-        this.outOfContext = outOfContext;
-    }
-
     public ArrayNetlistGraph getCondensedGraph() {
         return condensedGraph;
     }
@@ -337,111 +182,35 @@ public class ArrayBuilder {
         this.condensedGraph = condensedGraph;
     }
 
-    public boolean isExactPlacement() {
-        return exactPlacement;
+    private Map<ModuleInst, Site> getNewPlacementMap() {
+        return newPlacementMap;
     }
 
-    public void setExactPlacement(boolean exactPlacement) {
-        this.exactPlacement = exactPlacement;
-    }
+    private void initializeArrayBuilder() {
+        assert (config.getKernelDesign() != null);
 
-    public boolean unrouteStaticNets() {
-        return unrouteStaticNets;
-    }
+        kernelDesign = config.getKernelDesign();
+        topDesign = config.getTopDesign();
 
-    public void setUnrouteStaticNets(boolean unrouteStaticNets) {
-        this.unrouteStaticNets = unrouteStaticNets;
-    }
-
-    public boolean isRouteClock() {
-        return routeClock;
-    }
-
-    public void setRouteClock(boolean routeClock) {
-        this.routeClock = routeClock;
-    }
-
-    public boolean isRouteDesign() {
-        return routeDesign;
-    }
-
-    public void setRouteDesign(boolean routeDesign) {
-        this.routeDesign = routeDesign;
-    }
-
-    public String getSideMapFile() {
-        return sideMapFile;
-    }
-
-    public void setSideMapFile(String sideMapFile) {
-        this.sideMapFile = sideMapFile;
-    }
-
-    private void initializeArrayBuilder(OptionSet options) {
-        Path inputFile;
-
-        setSkipImpl(options.has(SKIP_IMPL_OPTS.get(0)));
-        setOutOfContext(options.has(OUT_OF_CONTEXT_OPTS.get(0)));
-        setExactPlacement(options.has(EXACT_PLACEMENT_OPTS.get(0)));
-        setUnrouteStaticNets(options.has(UNROUTE_STATIC_NETS_OPTS.get(0)));
-        setRouteClock(options.has(ROUTE_CLOCK_OPTS.get(0)));
-        setRouteDesign(options.has(ROUTE_DESIGN_OPTS.get(0)));
-        setSideMapFile((String) options.valueOf(SIDE_MAP_OPTS.get(0)));
-
-        if (options.has(KERNEL_DESIGN_OPTS.get(0))) {
-            inputFile = Paths.get((String) options.valueOf(KERNEL_DESIGN_OPTS.get(0)));
-            if (inputFile.toString().endsWith(".dcp")) {
-                if (options.has(INPUT_EDIF_OPTS.get(0))) {
-                    Path companionEDIF = Paths.get((String) options.valueOf(INPUT_EDIF_OPTS.get(0)));
-                    setKernelDesign(Design.readCheckpoint(inputFile, companionEDIF, CodePerfTracker.SILENT));
-                } else {
-                    setKernelDesign(Design.readCheckpoint(inputFile));
-                    EDIFTools.removeVivadoBusPreventionAnnotations(getKernelDesign().getNetlist());
-                    if (!design.getNetlist().getEncryptedCells().isEmpty()) {
-                        System.out.println("Design has encrypted cells");
-                    } else {
-                        System.out.println("Design does not have encrypted cells");
-                    }
-                }
-
-            } else if (inputFile.toString().endsWith(".edf")) {
-                EDIFNetlist netlist = EDIFTools.readEdifFile(inputFile);
-                if (options.has(PART_OPTS.get(0))) {
-                    Part part = PartNameTools.getPart((String) options.valueOf(PART_OPTS.get(0)));
-                    EDIFTools.ensureCorrectPartInEDIF(netlist, part.toString());
-                }
-                setKernelDesign(new Design(netlist));
-            }
-        } else {
-            throw new RuntimeException("No input design found. "
-                    + "Please specify an input kernel (*.dcp or *.edf) using options "
-                    + KERNEL_DESIGN_OPTS);
-        }
-        assert (getKernelDesign() != null);
-
-        if (options.has(PBLOCK_OPTS.get(0))) {
-            String pblockString = (String) options.valueOf(PBLOCK_OPTS.get(0));
-            String[] pblockStrings = pblockString.split(";");
+        if (config.getPBlockStrings() != null) {
             List<PBlock> pblocks = new ArrayList<PBlock>();
-            for (String str : pblockStrings) {
+            for (String str : config.getPBlockStrings()) {
                 pblocks.add(new PBlock(getDevice(), str));
             }
             setPBlocks(pblocks);
-        } else if (!skipImpl) {
+        } else if (!config.isSkipImpl()) {
             PBlockGenerator pb = new PBlockGenerator();
-            Path utilReport = null;
-            Path shapesReport = null;
-            if (options.has(UTILIZATION_OPTS.get(0)) && options.has(SHAPES_OPTS.get(0))) {
-                utilReport = Paths.get((String) options.valueOf(UTILIZATION_OPTS.get(0)));
-                shapesReport = Paths.get((String) options.valueOf(SHAPES_OPTS.get(0)));
+            Path utilReport;
+            Path shapesReport;
+            if (config.getUtilReport() != null && config.getShapesReport() != null) {
+                utilReport = Paths.get(config.getUtilReport());
+                shapesReport = Paths.get(config.getShapesReport());
             } else {
                 utilReport = Paths.get("utilization.report");
                 shapesReport = Paths.get("shapes.report");
-                if (!inputFile.toString().endsWith(".dcp")) {
-                    throw new RuntimeException(
-                            "TODO - Implement support for util/shapes file " + "generation with EDIF input file.");
-                }
-                VivadoTools.getUtilizationAndShapesReport(inputFile, utilReport, shapesReport);
+                Path kernelDesign = Paths.get("kernelDesign.dcp");
+                config.getKernelDesign().writeCheckpoint(kernelDesign);
+                VivadoTools.getUtilizationAndShapesReport(kernelDesign, utilReport, shapesReport);
             }
 
             List<String> pblocks = pb.generatePBlockFromReport(utilReport.toString(), shapesReport.toString());
@@ -460,51 +229,20 @@ public class ArrayBuilder {
             System.out.println("[INFO] PBlocks Set [" + i + "]: " + getPBlocks().get(i));
         }
 
-        if (options.has(TARGET_CLK_PERIOD_OPTS.get(0))) {
-            setClockPeriod(Double.parseDouble((String) options.valueOf(TARGET_CLK_PERIOD_OPTS.get(0))));
+        if (config.getTopDesign() != null) {
+            EDIFTools.removeVivadoBusPreventionAnnotations(config.getTopDesign().getNetlist());
+        }
+
+        if (config.getKernelClockName() != null) {
+            kernelClockName = config.getKernelClockName();
         } else {
-            setClockPeriod(DEFAULT_CLK_PERIOD_TARGET);
-            System.out.println("[INFO] No clock period set, defaulting to: " + getClockPeriod() + "ns");
+            kernelClockName = ClockTools.getClockFromDesign(config.getKernelDesign()).toString();
         }
 
-        if (options.has(KERNEL_CLK_NAME_OPTS.get(0))) {
-            setKernelClockName(((String) options.valueOf(KERNEL_CLK_NAME_OPTS.get(0))));
-        } else {
-            setKernelClockName(ClockTools.getClockFromDesign(getKernelDesign()).toString());
-        }
-
-        if (options.has(OUTPUT_DESIGN_OPTS.get(0))) {
-            setOutputName((String) options.valueOf(OUTPUT_DESIGN_OPTS.get(0)));
-        } else {
-            setOutputName("array.dcp");
-        }
-
-        if (options.has(LIMIT_INSTS_OPTS.get(0))) {
-            setInstCountLimit(Integer.parseInt((String) options.valueOf(LIMIT_INSTS_OPTS.get(0))));
-        }
-
-        if (options.has(TOP_LEVEL_DESIGN_OPTS.get(0))) {
-            Design d = Design.readCheckpoint((String) options.valueOf(TOP_LEVEL_DESIGN_OPTS.get(0)));
-            setTopDesign(d);
-            EDIFTools.removeVivadoBusPreventionAnnotations(getTopDesign().getNetlist());
-        }
-
-        if (options.has(TOP_CLK_NAME_OPTS.get(0))) {
-            setTopClockName(((String) options.valueOf(TOP_CLK_NAME_OPTS.get(0))));
-        } else if (options.has(TOP_LEVEL_DESIGN_OPTS.get(0))) {
-            setTopClockName(ClockTools.getClockFromDesign(getTopDesign()).toString());
-        }
-
-        if (options.has(WRITE_PLACEMENT_OPTS.get(0))) {
-            setOutputPlacementFileName((String) options.valueOf(WRITE_PLACEMENT_OPTS.get(0)));
-        }
-
-        if (options.has(PLACEMENT_FILE_OPTS.get(0))) {
-            setInputPlacementFileName((String) options.valueOf(PLACEMENT_FILE_OPTS.get(0)));
-        }
-
-        if (options.has(PLACEMENT_GRID_OPTS.get(0))) {
-            setOutputPlacementLocsFileName((String) options.valueOf(PLACEMENT_GRID_OPTS.get(0)));
+        if (config.getTopClockName() != null) {
+            topClockName = config.getTopClockName();
+        } else if (config.getTopDesign() != null) {
+            topClockName = ClockTools.getClockFromDesign(config.getTopDesign()).toString();
         }
     }
 
@@ -587,6 +325,9 @@ public class ArrayBuilder {
     }
 
     public static Map<String, String> readPlacementFromFile(String fileName) {
+        if (fileName == null) {
+            throw new RuntimeException("Trying to read placement file without providing a file path");
+        }
         Map<String, String> placementMap = new HashMap<>();
         List<String> lines = FileTools.getLinesFromTextFile(fileName);
 
@@ -645,72 +386,85 @@ public class ArrayBuilder {
         return placementGrid;
     }
 
-    public static void main(String[] args) {
-        CodePerfTracker t = new CodePerfTracker(ArrayBuilder.class.getName());
-        t.start("Init");
-        ArrayBuilder ab = new ArrayBuilder(t);
-        OptionParser p = ab.createOptionParser();
-        OptionSet options = p.parse(args);
+    private List<Module> implementKernel(Path workDir) {
+        t.stop().start("Implement Kernel");
+        FileTools.makeDirs(workDir.toString());
+        System.out.println("[INFO] Created work directory: " + workDir.toString());
 
-        if (options.has(HELP_OPTS.get(0))) {
-            printHelp(p);
-            return;
+        // Initialize PerformanceExplorer
+        PerformanceExplorer pe = new PerformanceExplorer(getKernelDesign(), workDir.toString(),
+                kernelClockName, config.getClockPeriod());
+
+        // Set PBlocks
+        Map<PBlock, String> pblocks = new HashMap<>();
+        for (PBlock pb : getPBlocks()) {
+            pblocks.put(pb, null);
         }
-
-        // Load design and options
-        ab.initializeArrayBuilder(options);
-
-        // Create a working directory for PerformanceExplorer
-        Path workDir = Paths.get("ArrayBuilder-" + FileTools.getTimeStamp().replace(" ", "-"));
-        boolean reuseResults = false;
-        if (options.has(REUSE_RESULTS_OPTS.get(0))) {
-            workDir = Paths.get((String) options.valueOf(REUSE_RESULTS_OPTS.get(0)));
-            reuseResults = true;
-        }
+        pe.setPBlocks(pblocks);
+        pe.setAddEDIFAndMetadata(true);
+        pe.setReusePreviousResults(config.isReuseResults());
+        pe.explorePerformance();
 
         List<Module> modules = new ArrayList<>();
-        if (!ab.isSkipImpl()) {
-            t.stop().start("Implement Kernel");
-            FileTools.makeDirs(workDir.toString());
-            System.out.println("[INFO] Created work directory: " + workDir.toString());
-
-            // Initialize PerformanceExplorer
-            PerformanceExplorer pe = new PerformanceExplorer(ab.getKernelDesign(), workDir.toString(),
-                    ab.getKernelClockName(), ab.getClockPeriod());
-
-            // Set PBlocks
-            Map<PBlock, String> pblocks = new HashMap<>();
-            for (PBlock pb : ab.getPBlocks()) {
-                pblocks.put(pb, null);
+        List<Pair<Path, Float>> results = pe.getBestResultsPerPBlock();
+        for (int i = 0; i < results.size(); i++) {
+            Pair<Path, Float> result = results.get(i);
+            Path dcpPath = result.getFirst().resolve("routed.dcp");
+            if (Files.exists(dcpPath)) {
+                System.out.println("Reading... " + dcpPath);
+                Design d = Design.readCheckpoint(dcpPath);
+                d.setName(d.getName() + "_" + i);
+                Module m = new Module(d, config.shouldUnrouteStaticNets());
+                modules.add(m);
+                m.setPBlock(pe.getPBlock(i));
+                m.calculateAllValidPlacements(d.getDevice());
+            } else {
+                System.err.println("Missing DCP Result: " + dcpPath);
             }
-            pe.setPBlocks(pblocks);
-            pe.setAddEDIFAndMetadata(true);
-            pe.setReusePreviousResults(reuseResults);
-            pe.explorePerformance();
+            System.out.println(result.getFirst() + " " + result.getSecond());
+        }
+        return modules;
+    }
 
-            List<Pair<Path, Float>> results = pe.getBestResultsPerPBlock();
-            for (int i = 0; i < results.size(); i++) {
-                Pair<Path, Float> result = results.get(i);
-                Path dcpPath = result.getFirst().resolve("routed.dcp");
-                if (Files.exists(dcpPath)) {
-                    System.out.println("Reading... " + dcpPath);
-                    Design d = Design.readCheckpoint(dcpPath);
-                    d.setName(d.getName() + "_" + i);
-                    Module m = new Module(d, ab.unrouteStaticNets());
-                    modules.add(m);
-                    m.setPBlock(pe.getPBlock(i));
-                    m.calculateAllValidPlacements(d.getDevice());
-                } else {
-                    System.err.println("Missing DCP Result: " + dcpPath);
-                }
-                System.out.println(result.getFirst() + " " + result.getSecond());
-            }
+    private List<Pair<Pair<Integer, Integer>, String>> calculateIdealArrayPlacement() {
+        t.stop().start("Calculate ideal array placement");
+        // Find instances in existing design
+        modInstNames = getMatchingModuleInstanceNames(modules.get(0), array);
+        if (modInstNames.isEmpty()) {
+            throw new RuntimeException("Failed to find module instances in top design that match kernel interface");
+        }
+        config.setInstCountLimit(modInstNames.size());
+        Map<EDIFPort, PBlockSide> sideMap = null;
+        if (config.getSideMapFile() != null) {
+            sideMap = InlineFlopTools.parseSideMap(getKernelDesign().getNetlist(), config.getSideMapFile());
+        }
+        setCondensedGraph(new ArrayNetlistGraph(array, modInstNames, sideMap));
+        Map<Pair<Integer, Integer>, String> idealPlacement =
+                getCondensedGraph().getGreedyPlacementGrid();
+        return idealPlacement.entrySet().stream()
+                .map((e) -> new Pair<>(e.getKey(), e.getValue()))
+                .sorted((p1, p2) -> {
+                    Pair<Integer, Integer> pa = p1.getFirst();
+                    Pair<Integer, Integer> pb = p2.getFirst();
+                    if (!Objects.equals(pa.getSecond(), pb.getSecond())) {
+                        return pa.getSecond().compareTo(pb.getSecond());
+                    }
+
+                    return pa.getFirst().compareTo(pb.getFirst());
+                })
+                .collect(Collectors.toList());
+    }
+
+    private List<Pair<Pair<Integer, Integer>, String>> prepareArrayForPlacement() {
+        Path workDir = Paths.get(config.getWorkDir());
+        if (!config.isSkipImpl()) {
+            modules = implementKernel(workDir);
         } else /* skipImpl==true */ {
             // Just use the design we loaded and replicate it
             t.stop().start("Calculate Valid Placements");
-            removeBUFGs(ab.getKernelDesign());
-            if (ab.unrouteStaticNets()) {
-                Net gndNet = ab.getKernelDesign().getNet(Net.GND_NET);
+            removeBUFGs(config.getKernelDesign());
+            if (config.shouldUnrouteStaticNets()) {
+                Net gndNet = config.getKernelDesign().getNet(Net.GND_NET);
                 if (gndNet != null) {
                     gndNet.unroute();
                     List<SitePinInst> staticSourcePins = new ArrayList<>();
@@ -730,62 +484,136 @@ public class ArrayBuilder {
                         siteInst.unPlace();
                     }
                 }
-                Net vccNet = ab.getKernelDesign().getNet(Net.VCC_NET);
+                Net vccNet = getKernelDesign().getNet(Net.VCC_NET);
                 if (vccNet != null) {
                     vccNet.unroute();
                 }
             }
-            Module m = new Module(ab.getKernelDesign(), ab.unrouteStaticNets());
-            m.getNet(ab.getKernelClockName()).unroute();
+            Module m = new Module(getKernelDesign(), config.shouldUnrouteStaticNets());
+            m.getNet(getKernelClockName()).unroute();
 
-            if (ab.getInputPlacementFileName() == null) {
-                m.calculateAllValidPlacements(ab.getDevice());
+            if (config.getInputPlacementFileName() == null) {
+                m.calculateAllValidPlacements(getDevice());
             }
-            if (!ab.getPBlocks().isEmpty()) {
-                m.setPBlock(ab.getPBlocks().get(0));
+            if (!getPBlocks().isEmpty()) {
+                m.setPBlock(getPBlocks().get(0));
             }
             modules.add(m);
         }
 
-        Design array = null;
-        List<String> modInstNames = null;
         // List containing pairs of (x,y) coordinates with the moduleInst name placed at that ideal (x,y) coordinate
         List<Pair<Pair<Integer, Integer>, String>> idealPlacementList = null;
-        if (ab.getTopDesign() == null) {
-            array = new Design("array", ab.getKernelDesign().getPartName());
+        if (getTopDesign() == null) {
+            array = new Design("array", getKernelDesign().getPartName());
         } else {
-            array = ab.getTopDesign();
-            t.stop().start("Calculate ideal array placement");
-            // Find instances in existing design
-            modInstNames = getMatchingModuleInstanceNames(modules.get(0), array);
-            if (modInstNames.isEmpty()) {
-                throw new RuntimeException("Failed to find module instances in top design that match kernel interface");
-            }
-            ab.setInstCountLimit(modInstNames.size());
-            Map<EDIFPort, PBlockSide> sideMap = null;
-            if (ab.getSideMapFile() != null) {
-                sideMap = InlineFlopTools.parseSideMap(ab.getKernelDesign().getNetlist(), ab.getSideMapFile());
-            }
-            ab.setCondensedGraph(new ArrayNetlistGraph(array, modInstNames, sideMap));
-            Map<Pair<Integer, Integer>, String> idealPlacement =
-                    ab.getCondensedGraph().getGreedyPlacementGrid();
-            idealPlacementList = idealPlacement.entrySet().stream()
-                    .map((e) -> new Pair<>(e.getKey(), e.getValue()))
-                    .sorted((p1, p2) -> {
-                        Pair<Integer, Integer> pa = p1.getFirst();
-                        Pair<Integer, Integer> pb = p2.getFirst();
-                        if (!Objects.equals(pa.getSecond(), pb.getSecond())) {
-                            return pa.getSecond().compareTo(pb.getSecond());
-                        }
-
-                        return pa.getFirst().compareTo(pb.getFirst());
-                    })
-                    .collect(Collectors.toList());
+            array = getTopDesign();
+            idealPlacementList = calculateIdealArrayPlacement();
         }
+        return idealPlacementList;
+    }
+
+    private void placeInstancesWithManualPlacementFile() {
+        Map<String, String> placementMap = readPlacementFromFile(config.getInputPlacementFileName());
+        System.out.println("Placing from specified file");
+        int placed = 0;
+        for (Map.Entry<String, String> entry : placementMap.entrySet()) {
+            String instName = entry.getKey();
+            String anchorName = entry.getValue();
+            EDIFHierCellInst hierInst = array.getNetlist().getHierCellInstFromName(instName);
+            if (hierInst == null) {
+                throw new RuntimeException("Instance name " + instName + " is invalid");
+            }
+            if (modules.size() > 1) {
+                throw new RuntimeException("Manual placement does not work with automated implementation");
+            }
+            Module module = modules.get(0);
+            ModuleInst curr = array.createModuleInst(instName, module);
+
+            Site anchor = array.getDevice().getSite(anchorName);
+
+            boolean wasPlaced = curr.place(anchor, true, false);
+            if (!wasPlaced) {
+                throw new RuntimeException("Unable to place cell " + instName + " at site " + anchor);
+            }
+
+            if (straddlesClockRegion(curr)) {
+                curr.unplace();
+                throw new RuntimeException("Chosen site anchor " + anchor + " straddles multiple clock regions");
+            }
+
+            newPlacementMap.put(curr, anchor);
+            placed++;
+            System.out.println("  ** PLACED: " + placed + " " + anchor + " " + curr.getName());
+        }
+    }
+
+    private void placeModuleInstancesAutomatically(List<Pair<Pair<Integer, Integer>, String>> idealPlacementList) {
+        int placed = 0;
+        ModuleInst curr = null;
+        int i = 0;
+
+        // TODO: Figure out how to handle placement for multiple modules
+        Module module = modules.get(0);
+        RelocatableTileRectangle boundingBox = module.getBoundingBox();
+        List<RelocatableTileRectangle> boundingBoxes = new ArrayList<>();
+        List<List<Site>> validPlacementGrid = getValidPlacementGrid(module);
+        int gridX = 0;
+        int gridY = 5;
+        int lastYCoordinate = 0;
+        boolean searchDown = true;
+        while (placed < config.getInstCountLimit()) {
+            if (curr == null) {
+                String instName = modInstNames == null ? ("inst_" + i) : idealPlacementList.get(i).getSecond();
+                int yCoordinate = idealPlacementList.get(i).getFirst().getSecond();
+                if (yCoordinate > lastYCoordinate) {
+                    gridX = 0;
+                    searchDown = true;
+                }
+                lastYCoordinate = yCoordinate;
+                curr = array.createModuleInst(instName, module);
+                i++;
+            }
+            if (gridY >= validPlacementGrid.size()) {
+                throw new RuntimeException("Optimal placement is too tall for device");
+            }
+            if (gridX >= validPlacementGrid.get(gridY).size()) {
+                throw new RuntimeException("Optimal placement is too wide for device");
+            }
+            Site anchor = validPlacementGrid.get(gridY).get(gridX);
+            RelocatableTileRectangle newBoundingBox =
+                    boundingBox.getCorresponding(anchor.getTile(), module.getAnchor().getTile());
+            boolean noOverlap = boundingBoxes.stream().noneMatch((b) -> b.overlaps(newBoundingBox));
+            if (config.isExactPlacement() || (noOverlap && !boundingBoxStraddlesClockRegion(newBoundingBox))) {
+                if (curr.place(anchor, true, false)) {
+                    if (config.isExactPlacement() && (straddlesClockRegion(curr)
+                            || !NetTools.getNetsWithOverlappingNodes(array).isEmpty())
+                    ) {
+                        curr.unplace();
+                    } else {
+                        boundingBoxes.add(newBoundingBox);
+                        placed++;
+                        newPlacementMap.put(curr, anchor);
+                        System.out.println("  ** PLACED: " + placed + " " + anchor + " " + curr.getName()
+                                + " " + curr.getAnchor().getTile().getSLR());
+                        curr = null;
+                        searchDown = false;
+                    }
+                }
+            }
+            if (!searchDown) {
+                gridX++;
+            } else {
+                gridY++;
+            }
+        }
+    }
+
+    private void placeArray() {
+        List<Pair<Pair<Integer, Integer>, String>> idealPlacementList = prepareArrayForPlacement();
 
         t.stop().start("Place Instances");
-        if (ab.getOutputPlacementLocsFileName() != null) {
-            writePlacementLocsToFile(modules, ab.getOutputPlacementLocsFileName());
+        if (config.getOutputPlacementLocsFileName() != null) {
+            writePlacementLocsToFile(modules, config.getOutputPlacementLocsFileName());
         }
 
         // Add encrypted cells from modules to array
@@ -798,197 +626,108 @@ public class ArrayBuilder {
             }
         }
 
-        int placed = 0;
-        Map<ModuleInst, Site> newPlacementMap = new HashMap<>();
-        if (ab.getInputPlacementFileName() != null) {
-            Map<String, String> placementMap = readPlacementFromFile(ab.inputPlacementFileName);
-            System.out.println("Placing from specified file");
-            for (Map.Entry<String, String> entry : placementMap.entrySet()) {
-                String instName = entry.getKey();
-                String anchorName = entry.getValue();
-                EDIFHierCellInst hierInst = array.getNetlist().getHierCellInstFromName(instName);
-                if (hierInst == null) {
-                    throw new RuntimeException("Instance name " + instName + " is invalid");
-                }
-                if (modules.size() > 1) {
-                    throw new RuntimeException("Manual placement does not work with automated implementation");
-                }
-                Module module = modules.get(0);
-                ModuleInst curr = array.createModuleInst(instName, module);
-
-                Site anchor = array.getDevice().getSite(anchorName);
-
-                boolean wasPlaced = curr.place(anchor, true, false);
-                if (!wasPlaced) {
-                    throw new RuntimeException("Unable to place cell " + instName + " at site " + anchor);
-                }
-
-                if (straddlesClockRegion(curr)) {
-                    curr.unplace();
-                    throw new RuntimeException("Chosen site anchor " + anchor + " straddles multiple clock regions");
-                }
-
-                newPlacementMap.put(curr, anchor);
-                placed++;
-                System.out.println("  ** PLACED: " + placed + " " + anchor + " " + curr.getName());
-            }
+        if (config.getInputPlacementFileName() != null) {
+            placeInstancesWithManualPlacementFile();
         } else {
-            ModuleInst curr = null;
-            int i = 0;
+            placeModuleInstancesAutomatically(idealPlacementList);
+        }
 
-            // TODO: Figure out how to handle placement for multiple modules
-            Module module = modules.get(0);
-            RelocatableTileRectangle boundingBox = module.getBoundingBox();
-            List<RelocatableTileRectangle> boundingBoxes = new ArrayList<>();
-            List<List<Site>> validPlacementGrid = getValidPlacementGrid(module);
-            int gridX = 0;
-            int gridY = 5;
-            int lastYCoordinate = 0;
-            boolean searchDown = true;
-            while (placed < ab.getInstCountLimit()) {
-                if (curr == null) {
-                    String instName = modInstNames == null ? ("inst_" + i) : idealPlacementList.get(i).getSecond();
-                    int yCoordinate = idealPlacementList.get(i).getFirst().getSecond();
-                    if (yCoordinate > lastYCoordinate) {
-                        gridX = 0;
-                        searchDown = true;
-                    }
-                    lastYCoordinate = yCoordinate;
-                    curr = array.createModuleInst(instName, module);
-                    i++;
-                }
-                if (gridY >= validPlacementGrid.size()) {
-                    throw new RuntimeException("Optimal placement is too tall for device");
-                }
-                if (gridX >= validPlacementGrid.get(gridY).size()) {
-                    throw new RuntimeException("Optimal placement is too wide for device");
-                }
-                Site anchor = validPlacementGrid.get(gridY).get(gridX);
-                RelocatableTileRectangle newBoundingBox =
-                        boundingBox.getCorresponding(anchor.getTile(), module.getAnchor().getTile());
-                boolean noOverlap = boundingBoxes.stream().noneMatch((b) -> b.overlaps(newBoundingBox));
-                if (ab.isExactPlacement() || (noOverlap && !boundingBoxStraddlesClockRegion(newBoundingBox))) {
-                    if (curr.place(anchor, true, false)) {
-                        if (ab.isExactPlacement() && (straddlesClockRegion(curr)
-                                || !NetTools.getNetsWithOverlappingNodes(array).isEmpty())
-                        ) {
-                            curr.unplace();
-                        } else {
-                            boundingBoxes.add(newBoundingBox);
-                            placed++;
-                            newPlacementMap.put(curr, anchor);
-                            System.out.println("  ** PLACED: " + placed + " " + anchor + " " + curr.getName()
-                                    + " " + curr.getAnchor().getTile().getSLR());
-                            curr = null;
-                            searchDown = false;
-                        }
-                    }
-                }
-                if (!searchDown) {
-                    gridX++;
-                } else {
-                    gridY++;
+        if (config.getOutputPlacementFileName() != null) {
+            writePlacementToFile(getNewPlacementMap(), config.getOutputPlacementFileName());
+        }
+    }
+
+    private void finalizeStandaloneArray() {
+        if (config.getTopDesign() != null) {
+            throw new RuntimeException("Cannot call finalizeStandaloneArray on an array with a top level design");
+        }
+        EDIFCell top = array.getTopEDIFCell();
+        EDIFHierNet clkNet = array.getNetlist().getHierNetFromName(getKernelClockName());
+        if (clkNet == null) {
+            // Create BUFG and clock net, then connect to all instances
+            Cell bufg = createBUFGCE(array, top, "bufg", array.getDevice().getSite("BUFGCE_X2Y0"));
+            Net clk = array.createNet(getKernelClockName());
+            clk.connect(bufg, "O");
+            Net clkIn = array.createNet(getKernelClockName() + "_in");
+            clkIn.connect(bufg, "I");
+            EDIFPort clkInPort = top.createPort(getKernelClockName(), EDIFDirection.INPUT, 1);
+            clkIn.getLogicalNet().createPortInst(clkInPort);
+            EDIFNet logClkNet = clk.getLogicalNet();
+            for (EDIFCellInst inst : top.getCellInsts()) {
+                EDIFPort port = inst.getPort(getKernelClockName());
+                if (port != null) {
+                    logClkNet.createPortInst(port, inst);
                 }
             }
         }
 
-        if (ab.getOutputPlacementFileName() != null) {
-            writePlacementToFile(newPlacementMap, ab.outputPlacementFileName);
-        }
-
-        List<Net> unrouted = NetTools.unrouteNetsWithOverlappingNodes(array);
-        if (!unrouted.isEmpty()) {
-            System.out.println("Found " + unrouted.size() + " overlapping nets, that were unrouted.");
-        }
-
-        if (ab.isSkipImpl() && ab.getTopDesign() == null) {
-            EDIFCell top = array.getTopEDIFCell();
-            EDIFHierNet clkNet = array.getNetlist().getHierNetFromName(ab.getKernelClockName());
-            if (clkNet == null) {
-                // Create BUFG and clock net, then connect to all instances
-                Cell bufg = createBUFGCE(array, top, "bufg", array.getDevice().getSite("BUFGCE_X2Y0"));
-                Net clk = array.createNet(ab.getKernelClockName());
-                clk.connect(bufg, "O");
-                Net clkIn = array.createNet(ab.getKernelClockName() + "_in");
-                clkIn.connect(bufg, "I");
-                EDIFPort clkInPort = top.createPort(ab.getKernelClockName(), EDIFDirection.INPUT, 1);
-                clkIn.getLogicalNet().createPortInst(clkInPort);
-                EDIFNet logClkNet = clk.getLogicalNet();
-                for (EDIFCellInst inst : top.getCellInsts()) {
-                    EDIFPort port = inst.getPort(ab.getKernelClockName());
-                    if (port != null) {
-                        logClkNet.createPortInst(port, inst);
-                    }
-                }
-            }
-
-            // Port up unconnected inputs
-            for (EDIFPort topPort : modules.get(0).getNetlist().getTopCell().getPorts()) {
-                if (topPort.isInput()) {
-                    if (top.getPort(topPort.getName()) == null) {
-                        EDIFPort port = top.createPort(topPort);
-                        if (port.isBus()) {
-                            for (int j = 0; j < port.getWidth(); j++) {
-                                EDIFNet net = top.createNet(port.getPortInstNameFromPort(j));
-                                net.createPortInst(port, j);
-                                for (ModuleInst mi : array.getModuleInsts()) {
-                                    net.createPortInst(port, j, mi.getCellInst());
-                                }
-                            }
-                        } else {
-                            EDIFNet net = top.createNet(port.getName());
-                            net.createPortInst(port);
+        // Port up unconnected inputs
+        for (EDIFPort topPort : modules.get(0).getNetlist().getTopCell().getPorts()) {
+            if (topPort.isInput()) {
+                if (top.getPort(topPort.getName()) == null) {
+                    EDIFPort port = top.createPort(topPort);
+                    if (port.isBus()) {
+                        for (int j = 0; j < port.getWidth(); j++) {
+                            EDIFNet net = top.createNet(port.getPortInstNameFromPort(j));
+                            net.createPortInst(port, j);
                             for (ModuleInst mi : array.getModuleInsts()) {
-                                net.createPortInst(port, mi.getCellInst());
+                                net.createPortInst(port, j, mi.getCellInst());
                             }
+                        }
+                    } else {
+                        EDIFNet net = top.createNet(port.getName());
+                        net.createPortInst(port);
+                        for (ModuleInst mi : array.getModuleInsts()) {
+                            net.createPortInst(port, mi.getCellInst());
                         }
                     }
                 }
             }
-
-            PerformanceExplorer.updateClockPeriodConstraint(array, ab.getKernelClockName(), ab.getClockPeriod());
-            array.setDesignOutOfContext(true);
-            array.setAutoIOBuffers(false);
         }
 
-        if (ab.unrouteStaticNets()) {
-            Net gndNet = array.getNet(Net.GND_NET);
-            if (gndNet != null) {
-                gndNet.unroute();
+        PerformanceExplorer.updateClockPeriodConstraint(array, getKernelClockName(), config.getClockPeriod());
+        array.setDesignOutOfContext(true);
+        array.setAutoIOBuffers(false);
+    }
+
+    private static void unrouteStaticNets(Design design) {
+        Net gndNet = design.getNet(Net.GND_NET);
+        if (gndNet != null) {
+            gndNet.unroute();
+        }
+        Net vccNet = design.getNet(Net.VCC_NET);
+        if (vccNet != null) {
+            vccNet.unroute();
+        }
+    }
+
+    private void createFlopHarnessForArray() {
+        t.stop().start("Create flop harness");
+        // Automatically find bounding PBlock based on used Slices, DSPs, and BRAMs
+        Set<Site> usedSites = new HashSet<>();
+        for (SiteInst siteInst : array.getSiteInsts()) {
+            if (siteInst.getName().contains(SiteInst.STATIC_SOURCE)) {
+                continue;
             }
-            Net vccNet = array.getNet(Net.VCC_NET);
-            if (vccNet != null) {
-                vccNet.unroute();
+            if (isSLICE(siteInst) || isBRAM(siteInst) || isDSP(siteInst)) {
+                usedSites.add(siteInst.getSite());
             }
         }
-        array.getNetlist().consolidateAllToWorkLibrary();
-        array.flattenDesign();
+        PBlock pBlock = new PBlock(array.getDevice(), usedSites);
+        InlineFlopTools.createAndPlaceFlopsInlineOnTopPortsNearPins(array, getTopClockName(), pBlock);
+    }
 
-        if (ab.isOutOfContext()) {
-            // Automatically find bounding PBlock based on used Slices, DSPs, and BRAMs
-            Set<Site> usedSites = new HashSet<>();
-            for (SiteInst siteInst : array.getSiteInsts()) {
-                if (siteInst.getName().contains(SiteInst.STATIC_SOURCE)) {
-                    continue;
-                }
-                if (isSLICE(siteInst) || isBRAM(siteInst) || isDSP(siteInst)) {
-                    usedSites.add(siteInst.getSite());
-                }
-            }
-            PBlock pBlock = new PBlock(array.getDevice(), usedSites);
-            InlineFlopTools.createAndPlaceFlopsInlineOnTopPortsNearPins(array, ab.getTopClockName(), pBlock);
-        }
-
-        if (ab.isRouteClock() && !ab.isRouteDesign()) {
+    private void routeArray() {
+        if (config.isRouteClock() && !config.isRouteDesign()) {
             t.stop().start("Route clock");
-            Net clockNet = array.getNet(ab.getTopClockName());
+            Net clockNet = array.getNet(config.getTopClockName());
             DesignTools.makePhysNetNameConsistent(array, clockNet);
             DesignTools.createPossiblePinsToStaticNets(array);
             DesignTools.createMissingSitePinInsts(array, clockNet);
             List<SitePinInst> pinsToRoute = clockNet.getPins();
 
             PartialRouter.routeDesignPartialNonTimingDriven(array, pinsToRoute);
-        } else if (ab.isRouteDesign()) {
+        } else if (config.isRouteDesign()) {
             t.stop().start("Route design");
             PartialCUFR.routeDesignWithUserDefinedArguments(array, new String[]{
                     "--fixBoundingBox",
@@ -996,10 +735,33 @@ public class ArrayBuilder {
                     "--nonTimingDriven",
             });
         }
+    }
 
-        t.stop().start("Write DCP");
-        array.writeCheckpoint(ab.getOutputName());
-        t.stop().printSummary();
+    public void createArray() {
+        // Place the array
+        placeArray();
+
+        // Unroute conflicting nets
+        List<Net> unrouted = NetTools.unrouteNetsWithOverlappingNodes(getArray());
+        if (!unrouted.isEmpty()) {
+            System.out.println("Found " + unrouted.size() + " overlapping nets, that were unrouted.");
+        }
+
+        if (config.isSkipImpl() && config.getTopDesign() == null) {
+            finalizeStandaloneArray();
+        }
+
+        if (config.shouldUnrouteStaticNets()) {
+            unrouteStaticNets(array);
+        }
+        array.getNetlist().consolidateAllToWorkLibrary();
+        array.flattenDesign();
+
+        if (config.isOutOfContext()) {
+            createFlopHarnessForArray();
+        }
+
+        routeArray();
     }
 
     private static Map<Pair<Integer, Integer>, String> foldIdealPlacement(Map<Pair<Integer, Integer>, String> placement,
@@ -1121,5 +883,31 @@ public class ArrayBuilder {
             }
         }
         return center.getRow();
+    }
+
+    public static void main(String[] args) {
+        CodePerfTracker t = new CodePerfTracker(ArrayBuilder.class.getName());
+        t.start("Init");
+
+        if (ArrayBuilderConfig.hasHelpArg(args)) {
+            ArrayBuilderConfig.printHelp();
+            return;
+        }
+
+        // Create config
+        ArrayBuilderConfig config = new ArrayBuilderConfig(args);
+        if (!config.isReuseResults()) {
+            config.setWorkDir("ArrayBuilder-" + FileTools.getTimeStamp().replace(" ", "-"));
+        }
+
+        // Create array builder with config
+        ArrayBuilder ab = new ArrayBuilder(config, t);
+        ab.initializeArrayBuilder();
+
+        ab.createArray();
+
+        t.stop().start("Write DCP");
+        ab.getArray().writeCheckpoint(ArrayBuilderConfig.getOutputName(args));
+        t.stop().printSummary();
     }
 }
